--- a/2017-09-14/exercise2.html
+++ b/2017-09-14/exercise2.html
@@ -5,11 +5,12 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
     <script src="./exercise2.js"></script>
 </head>
 
 <body>
-    <h2>A Simple ToDo Application</h2>
     <div id="root">
     </div>
 </body>
